--- a/Carrot-IDUQ/pom.xml
+++ b/Carrot-IDUQ/pom.xml
@@ -16,7 +16,7 @@
 
         <dependency>
             <groupId>org.carrot</groupId>
-            <artifactId>Carrot-Config</artifactId>
+            <artifactId>Carrot-Common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
