--- a/Carrot-Search-Client/pom.xml
+++ b/Carrot-Search-Client/pom.xml
@@ -11,5 +11,14 @@
     <packaging>jar</packaging>
     <artifactId>Carrot-Search-Client</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>org.carrot</groupId>
+            <artifactId>Carrot-Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
