--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Carrot-IDUQ</module>
-        <module>Carrot-Config</module>
+        <module>Carrot-Common</module>
         <module>Carrot-Search-Client</module>
+        <module>Carrot-Search-Server</module>
     </modules>
 
     <properties>
