--- a/Carrot-Common/pom.xml
+++ b/Carrot-Common/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>lucene-analyzers-common</artifactId>
         </dependency>
 
+        <!-- dubbo -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
